Day 5 : solutions and some

--- a/AdventOfCode2021.csproj
+++ b/AdventOfCode2021.csproj
@@ -29,6 +29,9 @@
     <EmbeddedResource Include="Resources\day4_input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\day5_input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Condition=" '$(EnableDefaultEmbeddedResourceItems)' == 'true' " Update="Resources.resx">
@@ -52,8 +55,14 @@
     <None Remove="Puzzles\" />
     <None Remove="Resources\sample3.txt" />
     <None Remove="Resources\day4_input.txt" />
+    <None Remove="Resources\day5_input.txt" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Puzzles\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Resources\day5_input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
