Day 7 : both solutions

--- a/AdventOfCode2021.csproj
+++ b/AdventOfCode2021.csproj
@@ -35,6 +35,9 @@
     <EmbeddedResource Include="Resources\day6_input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\day7_input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Condition=" '$(EnableDefaultEmbeddedResourceItems)' == 'true' " Update="Resources.resx">
@@ -60,6 +63,7 @@
     <None Remove="Resources\day4_input.txt" />
     <None Remove="Resources\day5_input.txt" />
     <None Remove="Resources\day6_input.txt" />
+    <None Remove="Resources\day7_input.txt" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Puzzles\" />
